[package]
name = "csvopd"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.133"
base64 = "0.22.1"
